# nco

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CITATION  CMakeLists.txt  COPYING  COPYRIGHT  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  appveyor.yml  autogen.sh  build.cmd  config.h.in  configure  configure.ac  configure.eg  configure.in
autobld/: mdate-sh  mkinstalldirs  texinfo.tex
bld/: Depends  Filepath  Makefile  README_Fedora.txt  Srcfiles  ddd_mpd.py  libnco_c++_tst.cc  libnco_tst.c  makdep  nco.spec  nco_dst.pl  nco_lib_tst.c  nco_tst.pl  nco_tst.sh  pbuilder-sid  pvmgetarch
bm/: NCO_benchmarks.pm  NCO_bm.pm  NCO_rgr.pm  bm.ncl  bm_lib.ncl  cch_clr.pl  cch_clr.sh  chunking-times.sh  ddra.theory_model.pl  gcm_T85.cdl  gne_exp.cdl  ipcc_dly_T85.cdl  ipcc_dly_T85.sh  mk_bm_plots.pl  ncclimo_profile.sh  nco_bm.pl  nco_bm.sh  nco_bm_bch.sh  nco_bm_benchmarks.pl  nco_bm_hyp.sh  nco_bm_md5wc_tbl.pl  skn_lgs.cdl  sml_fls.sh  sml_stl.cdl  stl_5km.cdl  stl_5km.sh  tms_lng.cdl
cmake/: .gitignore  README.md  bld.bat  build.bat  build.sh  clean.bat  clean.sh  cln.bat  clone.bat  cmake_uninstall.cmake.in  dep.bat  example.bat  in.nc.txt  in_grp.nc.txt  nco.bat
conda.recipe/: bld.bat  conda_build_config.yaml  meta.yaml  run_test.bat
data/: .gitignore  Makefile.am  Makefile.in  bgr.cdl  big.cdl  bin_cnt.nco  bsc_tst.nco  buggy.cdl  bzip2.cdl  cb_tst.nco  cf2.cdl  cf_grp.cdl  chk-aux-subset.nco  clc.cdl  cmip5.cdl  cmip5_1.cdl  cnk.cdl  ddra.nco  diwg_chk  dr.cdl  dsm.cdl  enum.cdl  grt_crc_ngl.nco  gsl_sf.in  hdf.cdl  hdn.cdl  hdr_pad.sh  in.cdl  in_1.cdl  in_2.cdl  in_4.cdl  in_grp.cdl  in_grp_1.cdl  in_grp_2.cdl  in_grp_3.cdl  in_grp_4.cdl  in_grp_5.cdl  in_grp_6.cdl  in_grp_7.cdl  in_grp_8.cdl  (+84 more)
debian/: changelog  control  convert  copyright  doc-base  docs  files  info  nco-doc.docs  nco.doc-base  postinst  postrm  prerm  rules  watch
doc/: .gitignore  ANNOUNCE  AUTHORS  ChangeLog  LICENSE  MANIFEST  Makefile.am  Makefile.in  NEWS  README  README_Fedora.txt  README_msvc.txt  TAG  TODO  VERSION  abs_igrid_2005.txt  alg_cf2_oog.pptx  beta.txt  build_hints.shtml  cdtime.c  conda.txt  debian.txt  dir  dods.sh  endorsements.txt  help.txt  highlights_old.shtml  i18n.txt  index.shtml  insure.txt  logo_cog.odp  logo_srl.xcf  man_end.txt  man_srt.txt  milestones_old.shtml  mpi.txt  my-bib-macros.texi  ncap.txt  nces.txt  nco.css  (+25 more)
doc/fgr/: qnt_cr_bz2.txt  qnt_cr_dfl.txt  qnt_cr_zst.txt
doc/xmp/: add_crd.sh  ann_avg.sh  ann_avg_grp.sh  bi_interp.nco  cmb_fl.sh  cmb_fl_grp.sh  crd.nco  fgr1.eps  fgr1.txt  fgr2.eps  fgr2.txt  fgr3.eps  fgr3.txt  glb_avg.sh  grp.sh  gsl_rgr.nco  ivs_lat.nco  mcc.sh  mcc_grp.sh  permute_coor.sh  pmt_crd.sh  rgr.sh
man/: .gitignore  Makefile.am  Makefile.in  diwg_chk.1  ncap.1  ncap2.1  ncatted.1  ncbo.1  ncchecker.1  ncclimo.1  ncdiff.1  ncea.1  ncecat.1  nces.1  ncflint.1  ncks.1  nco.1  ncpdq.1  ncra.1  ncrcat.1  ncremap.1  ncrename.1  ncwa.1  ncz2psx.1
po/: nco.pot
po/es/: nco.po
po/fr/: nco.po
qt/: nco.pri  nco.pro  nco.sln
qt/libnco/: libnco.pro  libnco.vcxproj  libnco.vcxproj.filters
qt/libnco_c++/: libnco_c++.pro  libnco_c++.vcxproj  libnco_c++.vcxproj.filters
qt/ncap2/: ncap2.pro  ncap2.vcxproj  ncap2.vcxproj.filters
qt/ncatted/: ncatted.pro  ncatted.vcxproj  ncatted.vcxproj.filters
qt/ncbo/: ncbo.pro  ncbo.vcxproj  ncbo.vcxproj.filters
qt/ncea/: ncea.pro  ncea.vcxproj
qt/ncecat/: ncecat.pro  ncecat.vcxproj  ncecat.vcxproj.filters
qt/ncflint/: ncflint.pro  ncflint.vcxproj  ncflint.vcxproj.filters
qt/ncks/: ncks.pro  ncks.vcxproj  ncks.vcxproj.filters
qt/nco++/: ncap2.vcxproj  nco++.pro
qt/nco_c++/: libnco_c++.vcxproj  nco_c++.pro
qt/ncpdq/: ncpdq.pro  ncpdq.vcxproj  ncpdq.vcxproj.filters
qt/ncra/: ncra.pro  ncra.vcxproj  ncra.vcxproj.filters
qt/ncrcat/: ncrcat.pro  ncrcat.vcxproj
qt/ncrename/: ncrename.pro  ncrename.vcxproj  ncrename.vcxproj.filters
qt/ncwa/: ncwa.pro  ncwa.vcxproj  ncwa.vcxproj.filters
qt/tst_nco_c++/: tst.vcxproj  tst_nco_c++.pro  tst_nco_c++.vcxproj  tst_nco_c++.vcxproj.filters
src/: .gitignore  Makefile.am  Makefile.in
src/cuda/: simpleTemplates.cu  simpleTemplates_kernel.cu
src/nco/: .gitignore  ESMC_CoordSys.h  Makefile.am  Makefile.in  cal_util.F  csz.c  kd.c  kd.h  libnco.h  mpncbo.c  mpncecat.c  mpncflint.c  mpncpdq.c  mpncra.c  mpncwa.c  nc.h  nc_fortran.F  nc_utl.c  ncap.c  ncap.h  ncap.l  ncap.tab.c  ncap.tab.h  ncap.y  ncap_lex.c  ncap_lex.l  ncap_utl.c  ncap_utl.h  ncap_yacc.c  ncap_yacc.h  ncap_yacc.y  ncatted.c  ncbnr.c  ncbo.c  ncdiff.c  ncecat.c  ncflint.c  ncks.c  nco.h  nco_att_utl.c  (+123 more)
src/nco++/: .gitignore  ExitException.hpp  Invoke.cc  Invoke.hh  Makefile  Makefile.am  Makefile.in  Makefile.old  Ncap.hh  Ncap2.hh  NcapVar.cc  NcapVar.hh  NcapVarVector.cc  NcapVarVector.hh  NcapVector.hh  VarOp.hh  VarOpNew.hh  antlrCharScannerModify.sh  fmc_all_cls.cc  fmc_all_cls.hh  fmc_cls.cc  fmc_cls.hh  fmc_gsl_cls.cc  fmc_gsl_cls.hh  libnco++.hh  map_srt_tmp.hh  ncap.cc  ncap.hh  ncap2.cc  ncap2.hh  ncap2_att.cc  ncap2_att.hh  ncap2_utl.cc  ncap2_utl.hh  ncap_utl.cc  ncoEnumTokenTypes.hpp  ncoGrammar.g  ncoGrammer.g  ncoLexer.cpp  ncoLexer.hpp  (+17 more)
src/nco_c++/: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.old  README  TODO  libnco_c++.hh  nco_att.cc  nco_att.hh  nco_dmn.cc  nco_dmn.hh  nco_fl.cc  nco_fl.hh  nco_hgh.cc  nco_hgh.hh  nco_utl.cc  nco_utl.hh  nco_var.cc  nco_var.hh  tst.cc
src/ssdap/: INSTALL.txt  asyncinit.ssdap  chaining.ssdap  dap_nc_handler_hack  dap_nc_swamp  example-test1.txt  full_resamp.swamp  fullpbs.bash  multifile.ssdap  remotefilebench.ssdap  scriptwrap.py  scriptwrap2.py  simplescript.ssdap  slave.conf  ssdap_dbutil.py  ssdap_handler.conf  ssdebug  ssdwrap.conf  ssdwrap.py  stdout.ssdap  swamp.conf  swamp_client.py  swamp_common.py  swamp_config.py  swamp_dbutil.py  swamp_handler.conf  swamp_service.wsdl  swamp_soapinterface.py  swamp_soapslave.py  swampsendscript.py  test_glob_remote.bash  testasyncloop.bash  testchain.bash  testhandler.bash  (+4 more)
